[tool.poetry]
name = "nuropb_gw"
version = "0.1.1"
description = "Websocket gateway library for Nuropb Service Mesh"
authors = ["Robert Betts <robert.betts@genoa.io>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/robertbetts/command"
repository = "https://github.com/robertbetts/command"
keywords = ["python", "asynchrous", "api", "event", "rpc", "distributed", "websockets", "sevice-mesh"]
classifiers = [
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.10',
    'Operating System :: OS Independent'
]
packages = [
    {include = "nuropb_gw", from = "src"},
]

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
python-dotenv = "^1.0.0"
tornado = "^6.3.3"
nuropb = "^0.1.4"


[tool.poetry.group.dev.dependencies]
poetry = "^1.5.1"
pytest = "^7.3.1"
certifi = "^2022.12.7"
coverage = {extras = ["toml"], version = "^7.2.7"}
pytest-dotenv = "^0.5.2"
black = "^23.3.0"
mypy = "^1.4.1"
pytest-asyncio = "^0.21.1"
pytest-tornado = "^0.8.1"
Faker = "^18.13.0"
freezegun = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
env_files = [".env_test"]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.pytest.ini_options]
log_cli = true
log_level = "DEBUG"
log_cli_format = " %(levelname).1s %(asctime)s,%(msecs)d %(module)s %(lineno)s %(message)s"
log_cli_date_format = "%d %H:%M:%S"

[tool.coverage.run]
omit = ["examples/*", ".*", "*/site-packages/*"]
[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
files = "src"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
exclude = [
    "tests",
]

[tool.pylint]
#ignore-paths = "tests"
notes = "FIXME,XXX"